--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,11 @@ body {
   line-height: 1.4;
 }
 
+body {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
